resolved non visible loading spinner when fetching connect devices

--- a/client/src/components/Host/styles/Player.scss
+++ b/client/src/components/Host/styles/Player.scss
@@ -67,7 +67,7 @@
     justify-content: center;
     align-items: center;
 
-    div {
+    > div {
         position: absolute;
         background-color: var(--spotify_gray);
         border-radius: 5px;
@@ -103,6 +103,12 @@
                     border-bottom-left-radius: 5px;
                     border-bottom-right-radius: 5px;
                 }
+            }
+
+            .loading {
+                display: flex;
+                justify-content: center;
+                padding: 1rem;
             }
         }
 
